k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskanetes
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flaskanetes
